# authservice/controllers/register.go
@@ -9,43 +9,44 @@ import (
 	"go.uber.org/zap"
 )
 
-// SignupController is the Signup route handler
-type SignupController struct {
+// RegisterController is the Register route handler
+type RegisterController struct {
 	logger *zap.Logger
 }
-type SignupRequest struct {
+
+type RegisterRequest struct {
 	Email        string `json:"email"`
 	PasswordHash string `json:"passwordhash"`
 }
-type SignupResponse struct {
+
+type RegisterResponse struct {
 	Token string `json:"token"`
 }
 
-// NewSignupController returns a frsh Signup controller
-
-func NewSignupController(logger *zap.Logger) *SignupController {
-	return &SignupController{
+// NewRegisterController returns a fresh Register controller
+func NewRegisterController(logger *zap.Logger) *RegisterController {
+	return &RegisterController{
 		logger: logger,
 	}
 }
 
 // adds the user to the database of users
-// Signup - register a new user
+// Register - register a new user
 // @Summary Register a new user
 // @Description Register a new user with email and password
 // @Accept json
 // @Produce json
-// @Param input body SignupRequest true "User signup info"
-// @Success 200 {object} SignupResponse
+// @Param input body RegisterRequest true "User register info"
+// @Success 200 {object} RegisterResponse
 // @Failure 400 {object} map[string]string
 // @Failure 500 {object} map[string]string
-// @Router /signup [post]
-func (ctrl *SignupController) SignupHandler(rw http.ResponseWriter, r *http.Request) {
+// @Router /register [post]
+func (ctrl *RegisterController) RegisterHandler(rw http.ResponseWriter, r *http.Request) {
 	// Create a variable to hold the request data
-	var signupRequest SignupRequest
+	var registerRequest RegisterRequest
 
-	// Decode the JSON request body into the SignupRequest struct
-	err := json.NewDecoder(r.Body).Decode(&signupRequest)
+	// Decode the JSON request body into the RegisterRequest struct
+	err := json.NewDecoder(r.Body).Decode(&registerRequest)
 	if err != nil {
 		ctrl.logger.Error("Error decoding request body", zap.Error(err))
 		rw.WriteHeader(http.StatusBadRequest)
@@ -53,9 +54,9 @@ func (ctrl *SignupController) SignupHandler(rw http.ResponseWriter, r *http.Requ
 		return
 	}
 
-	// Now you can access the data from signupRequest
-	email := signupRequest.Email
-	passwordHash := signupRequest.PasswordHash
+	// Now you can access the data from registerRequest
+	email := registerRequest.Email
+	passwordHash := registerRequest.PasswordHash
 
 	// You can also add validation for other fields if needed
 
