# authservice/docs/swagger.json
@@ -4,24 +4,24 @@
         "contact": {}
     },
     "paths": {
-        "/signin": {
+        "/login": {
             "post": {
-                "description": "Sign in with email and password",
+                "description": "Log in with email and password",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Sign in a user and obtain a JWT token",
+                "summary": "Log in a user and obtain a JWT token",
                 "parameters": [
                     {
-                        "description": "User signin info",
+                        "description": "User login info",
                         "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.SigninRequest"
+                            "$ref": "#/definitions/controllers.LoginRequest"
                         }
                     }
                 ],
@@ -29,7 +29,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controllers.SigninResponse"
+                            "$ref": "#/definitions/controllers.LoginResponse"
                         }
                     },
                     "400": {
@@ -62,7 +62,7 @@
                 }
             }
         },
-        "/signup": {
+        "/register": {
             "post": {
                 "description": "Register a new user with email and password",
                 "consumes": [
@@ -74,12 +74,12 @@
                 "summary": "Register a new user",
                 "parameters": [
                     {
-                        "description": "User signup info",
+                        "description": "User register info",
                         "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.SignupRequest"
+                            "$ref": "#/definitions/controllers.RegisterRequest"
                         }
                     }
                 ],
@@ -87,7 +87,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controllers.SignupResponse"
+                            "$ref": "#/definitions/controllers.RegisterResponse"
                         }
                     },
                     "400": {
@@ -113,7 +113,7 @@
         }
     },
     "definitions": {
-        "controllers.SigninRequest": {
+        "controllers.LoginRequest": {
             "type": "object",
             "properties": {
                 "email": {
@@ -124,7 +124,7 @@
                 }
             }
         },
-        "controllers.SigninResponse": {
+        "controllers.LoginResponse": {
             "type": "object",
             "properties": {
                 "token": {
@@ -132,7 +132,7 @@
                 }
             }
         },
-        "controllers.SignupRequest": {
+        "controllers.RegisterRequest": {
             "type": "object",
             "properties": {
                 "email": {
@@ -143,7 +143,7 @@
                 }
             }
         },
-        "controllers.SignupResponse": {
+        "controllers.RegisterResponse": {
             "type": "object",
             "properties": {
                 "token": {
